--- a/ARKFUTURE/CONFIG/inspircd/conf/links.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/links.conf
@@ -4,7 +4,7 @@
 
 #-#-#-#-#-#-#-#-#-#-#-  服务器链接配置  -#-#-#-#-#-#-#-#-#-#
 <bind address="127.0.0.1" port="7000" type="servers">
-<link name="services.arkfuture.test"
+<link name="&ServiceName"
       ipaddr="127.0.0.1"
       port="7000"
       allowmask="*"
