--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -414,7 +414,7 @@
        zlineonmatch="no">
 
 <sasl requiressl="yes"
-      target="services.arkfuture.test">
+      target="&ServiceName">
 
 <securelist exemptregistered="yes"
             showmsg="yes"
