--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -19,6 +19,7 @@
 <define name="TxtPath" value="txt">
 # 定义域名[此项的value需要修改为您的irc域名(主机名)]
 <define name="HostName" value="irc.arkfuture.test">
+<define name="ServiceName" value="services.arkfuture.test">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#服务器信息#-#-#-#-#-#-#-#-#-#-#-#-#
