--- a/ARKFUTURE/CONFIG/inspircd/conf/links.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/links.conf
@@ -4,7 +4,7 @@
 
 #-#-#-#-#-#-#-#-#-#-#-  服务器链接配置  -#-#-#-#-#-#-#-#-#-#
 <bind address="127.0.0.1" port="7000" type="servers">
-<link name="&ServiceName"
+<link name="&ServiceName;"
       ipaddr="127.0.0.1"
       port="7000"
       allowmask="*"
@@ -13,4 +13,4 @@
       hidden="no"
       sendpass="FEhZyMU8DQX3A3MPApTF"
       recvpass="FEhZyMU8DQX3A3MPApTF">
-<uline server="services.arkfuture.test" silent="yes">
+<uline server="&ServiceName;" silent="yes">
