--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -1,7 +1,6 @@
 # Inspircd conf ---UTF-8 ---Security configuration
-# 这只是一个基础的设置(模板)文件 我们展示了部分值展示给您 它可能需要根据您的需求进行调整
+# ARKFUTURE配置, 您可以根据您需要而修改
 # !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
-# !!!!我们注释掉了预编译的模块!!!!
 
 # 您可以在以下文档中查询详细设置来完善此设置,我们的设置基于官方文档
 # 请参阅中的示例(更具体的) /usr/share/doc/inspircd/examples/
@@ -14,11 +13,12 @@
 <path configdir="&dir.config;">
 
 # <define>标签允许您定义一个实体(定义服务器变量).此标签可以根据需要定义多次.
-# 定义路径
+# 定义路径[无需修改]
 <define name="ConfPath" value="conf">
 <define name="TxtPath" value="txt">
-# 定义域名[此项的value需要修改为您的irc域名(主机名)]
+# 定义域名[此项的value需要修改为您的ircd域名(主机名)]
 <define name="HostName" value="irc.arkfuture.test">
+# 定义域名[此项的value需要修改为您的ircService域名(主机名)]
 <define name="ServiceName" value="services.arkfuture.test">
 
 
@@ -34,13 +34,17 @@
 # <admin>标签定义了服务器管理员的联系方式.此标签只能定义一次.
 <admin name="arkfuture"
        description="Server Administrator"
-       email="arkfuture@i2pmail.org">
+       email="EXAMPLE@EXAMPLE.COM">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#端口设置#-#-#-#-#-#-#-#-#-#-#-#-#
 # <bind>标签定义了一个监听连接的端点.这个标签可以根据需要定义多次.
+#普通连接 第一个为明文 第二个为ssl
 <bind port="6667,6668,6669"
       type="clients">
+<bind port="6697"
+      type="clients"
+      sslprofile="Clients">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#连接设置#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -64,8 +68,7 @@
          parent="Main"
          allow="*"
          modes="+iw"
-         motd="motd"
-         usests="no">
+         motd="motd">
 
 
 #-#-#-#-#-#-#-#-#-#-杂项设置-#-#-#-#-#-#-#-#-#-#
@@ -98,18 +101,18 @@
          fixedpart=""
          fixedquit=""
          invitebypassmodes="yes"
-         nosnoticestack="yes"
+         nosnoticestack="no"
          maskinlist="no"
          maskintopic="no"
-         modesinlist="yes"
+         modesinlist="opers"
          prefixpart="&quot;"
          prefixquit="Quit: "
          splitwhois="splitmsg"
          suffixpart="&quot;"
          suffixquit=""
          syntaxhints="yes"
-         xlinemessage="您已被禁止, 如获取帮助 请发匿名邮件并带上您的Nick到 arkfuture@i2pmail.org 获取详细信息."
-         xlinequit="您因 %fulltype% 被限制, 此限制于 %created% 创建, 将持续 %duration%, 预计 %expiry% 到期. 设置者为 %setter%, 原因是：%reason%.  如获取帮助 请发匿名邮件并带上您的Nick到 arkfuture@i2pmail.org 获取详细信息.">
+         xlinemessage="您已被禁止(ban), 如获取帮助 请发匿名邮件并带上您的Nick到 EXAMPLE@EXAMPLE.COM 获取详细信息."
+         xlinequit="您因 %fulltype% 被限制, 此限制于 %created% 创建, 将持续 %duration%, 预计 %expiry% 到期, 原因是：%reason%.">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#安全设置#-#-#-#-#-#-#-#-#-#-#-#
@@ -117,9 +120,9 @@
 <security announceinvites="dynamic"
           customversion="ARKFUTURE-NET"
           genericoper="no"
-          publicxlinequit="很遗憾, 你因匹配到 %fulltype% 而离开. 此 %type% 于 %created% 创建, 持续时间为 %duration%, 将于 %expiry% 过期, 目前还剩 %remaining% 时间. 如获取帮助 请发匿名邮件并带上您的Nick到 arkfuture@i2pmail.org 获取详细信息."
-          hidekills="您已经被KILL, 如获取帮助 请发匿名邮件并带上您的Nick到 arkfuture@i2pmail.org 获取详细信息."
-          hideserver=""
+          publicxlinequit="很遗憾, 你因匹配到 %fulltype% 而离开. 此 %type% 于 %created% 创建, 持续时间为 %duration%, 将于 %expiry% 过期, 目前还剩 %remaining% 时间. "
+          hidekills="您已经被KILL, 如获取帮助 请发匿名邮件并带上您的Nick到 EXAMPLE@EXAMPLE.COM 获取详细信息."
+          hideserver="ARKFUTURE.NET"
           hideservicekills="yes"
           maxtargets="20"
           restrictbannedusers="yes"
@@ -135,7 +138,7 @@
              netbuffersize="" 
              softlimit="" 
              somaxconn="" 
-             timeskipwarn="2s">
+             timeskipwarn="2s"> 
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#WHOWAS设置#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -221,6 +224,14 @@
          noexec="no"
          noinclude="no"
          mandatorytag="oper"
+         missingokay="no">
+
+# 服务器互联配置
+<include file="&ConfPath;/links.conf"
+         noenv="no"
+         noexec="no"
+         noinclude="no"
+         mandatorytag="link"
          missingokay="no">
 
 # codepage模块所导入的ascii格式
