--- a/arkfuture/config/i2p-tor/i2pd.conf
+++ b/arkfuture/config/i2p-tor/i2pd.conf
@@ -12,8 +12,7 @@ nat = true
 notransit = false
 floodfill = false
 
-log = file
-logfile = /var/log/i2pd/i2pd.log
+log = yes
 loglevel = info
 logclftime = true
 
