--- a/arkfuture/config/i2p-tor/i2pd.conf
+++ b/arkfuture/config/i2p-tor/i2pd.conf
@@ -9,8 +9,8 @@
 ipv4 = true
 ipv6 = true
 nat = true
-notransit = false
-floodfill = false
+notransit = false #路由器将不接受中转隧道 从而完全禁用中转流量
+floodfill = false #路由器将被泛洪填充
 
 log = yes
 loglevel = info
