--- a/arkfuture/config/inspircd/inspircd.conf
+++ b/arkfuture/config/inspircd/inspircd.conf
@@ -50,17 +50,17 @@
 #-#-#-#-#-#-#-#-#-#-#-#-#连接设置#-#-#-#-#-#-#-#-#-#-#-#-#
 # <connect>标签定义了一个类,当用户连接到服务器时,可以将用户过滤到这个类中.此标签可以根据需要定义多次.
 <connect name="Main"
-         commandrate="3000"
-         fakelag="yes"
-         globalmax="3"
-         hardsendq="5M"
+         commandrate="0"
+         fakelag="on"
+         globalmax="0"
+         hardsendq="10M"
          localmax="3"
          maxconnwarn="no"
-         pingfreq="100s"
-         recvq="8K"
+         pingfreq="2m"
+         recvq="1M"
          resolvehostnames="yes"
-         softsendq="8K"
-         threshold="40"
+         softsendq="5M"
+         threshold="0"
          timeout="15s"
          uniqueusername="yes">
 
