--- a/arkfuture/config/inspircd/inspircd.conf
+++ b/arkfuture/config/inspircd/inspircd.conf
@@ -1,5 +1,5 @@
 # Inspircd conf ---UTF-8 ---Security configuration
-# ARKFUTURE配置, 您可以根据您需要而修改
+# ARKFUTURE配置, !!!!您可以根据您的实际需要而修改!!!!, 此配置为了适配deb官方包而未使用TLS/SSL功能, 此配置始终使用最新发布的INSPIRCD
 # !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
 
 # 您可以在以下文档中查询详细设置来完善此设置,我们的设置基于官方文档
@@ -34,7 +34,7 @@
 # <admin>标签定义了服务器管理员的联系方式.此标签只能定义一次.
 <admin name="arkfuture"
        description="Server Administrator"
-       email="EXAMPLE@EXAMPLE.COM">
+       email="arkfuture@i2pmail.org">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#端口设置#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -42,9 +42,11 @@
 #普通连接 第一个为明文 第二个为ssl
 <bind port="6667,6668,6669"
       type="clients">
-<bind port="6697"
+
+#websocket连接 第一个为明文 第二个为ssl
+<bind port="8067"
       type="clients"
-      sslprofile="Clients">
+      hook="websocket">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#连接设置#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -68,7 +70,15 @@
          parent="Main"
          allow="*"
          modes="+iw"
-         motd="motd">
+         motd="motd"
+         usests="no">
+
+<connect name="Secure"
+         parent="Main"
+         allow="*"
+         modes="+iw"
+         motd="motd"
+         requiressl="yes">
 
 
 #-#-#-#-#-#-#-#-#-#-杂项设置-#-#-#-#-#-#-#-#-#-#
@@ -111,7 +121,7 @@
          suffixpart="&quot;"
          suffixquit=""
          syntaxhints="yes"
-         xlinemessage="您已被禁止(ban), 如获取帮助 请发匿名邮件并带上您的Nick到 EXAMPLE@EXAMPLE.COM 获取详细信息."
+         xlinemessage="您已被禁止(ban), 如获取帮助 请发匿名邮件并带上您的Nick到 arkfuture@i2pmail.org 获取详细信息."
          xlinequit="您因 %fulltype% 被限制, 此限制于 %created% 创建, 将持续 %duration%, 预计 %expiry% 到期, 原因是：%reason%.">
 
 
@@ -121,7 +131,7 @@
           customversion="ARKFUTURE-NET"
           genericoper="no"
           publicxlinequit="很遗憾, 你因匹配到 %fulltype% 而离开. 此 %type% 于 %created% 创建, 持续时间为 %duration%, 将于 %expiry% 过期, 目前还剩 %remaining% 时间. "
-          hidekills="您已经被KILL, 如获取帮助 请发匿名邮件并带上您的Nick到 EXAMPLE@EXAMPLE.COM 获取详细信息."
+          hidekills="您已经被KILL, 如获取帮助 请发匿名邮件并带上您的Nick到 arkfuture@i2pmail.org 获取详细信息."
           hideserver="ARKFUTURE.NET"
           hideservicekills="yes"
           maxtargets="20"
@@ -203,57 +213,28 @@
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#日志设置#-#-#-#-#-#-#-#-#-#-#-#
-<log method="file"
-     type="*"
-     level="normal"
-     target="&dir.log;/ircd.log"
+<log method="file" 
+     type="*" 
+     level="normal" 
+     target="&dir.log;/ircd.log" 
      flush="500">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#其他#-#-#-#-#-#-#-#-#-#-#-#
 # 模块配置文件
-<include file="&ConfPath;/modules.conf"
-         noenv="no"
-         noexec="no"
-         noinclude="no"
-         missingokay="no">
+<include file="&ConfPath;/modules.conf" noenv="no" noexec="no" noinclude="no" mandatorytag="module" missingokay="no">
 
 # 管理员配置文件
-<include file="&ConfPath;/opers.conf"
-         noenv="no"
-         noexec="no"
-         noinclude="no"
-         mandatorytag="oper"
-         missingokay="no">
+#<include file="&ConfPath;/opers.conf" noenv="no" noexec="no" noinclude="no" mandatorytag="oper" missingokay="no">
 
 # 服务器互联配置
-<include file="&ConfPath;/links.conf"
-         noenv="no"
-         noexec="no"
-         noinclude="no"
-         mandatorytag="link"
-         missingokay="no">
+#<include file="&ConfPath;/links.conf" noenv="no" noexec="no" noinclude="no" mandatorytag="link" missingokay="no">
 
 # codepage模块所导入的ascii格式
-<include file="&ConfPath;/ascii.conf"
-         noenv="yes"
-         noexec="yes"
-         noinclude="no"
-         mandatorytag="cpchars"
-         missingokay="no">
+<include file="&ConfPath;/ascii.conf" noenv="yes" noexec="yes" noinclude="no" mandatorytag="cpchars" missingokay="no">
 
 # 帮助文件
-<include file="&ConfPath;/helpop.conf"
-         noenv="yes"
-         noexec="yes"
-         noinclude="no"
-         mandatorytag="helpmsg"
-         missingokay="no">
+<include file="&ConfPath;/helpop.conf" noenv="yes" noexec="yes" noinclude="no" mandatorytag="helpmsg" missingokay="no">
 
 # 预留的别名和昵称
-<include file="&ConfPath;/generic.conf"
-         noenv="yes"
-         noexec="yes"
-         noinclude="no"
-         mandatorytag="alias"
-         missingokay="no">
+<include file="&ConfPath;/generic.conf" noenv="yes" noexec="yes" noinclude="no" mandatorytag="alias" missingokay="no">
