--- a/arkfuture/config/gitea/app.ini
+++ b/arkfuture/config/gitea/app.ini
@@ -1,4 +1,4 @@
-;Gitea config ---UTF-8 ---Security configuration
+;Gitea config ---UTF-8 ---Security configuration 本地主机适用 如果需要请自行改为远程模式
 APP_NAME = ARKFUTURE
 RUN_USER = ARKFUTURE
 WORK_PATH = 修改为gitea工作目录
