--- a/arkfuture/config/ngircd/ngircd.conf
+++ b/arkfuture/config/ngircd/ngircd.conf
@@ -179,7 +179,7 @@
 	# SSL 相关配置选项。注意：此部分仅在 ngIRCd 编译时启用 SSL 支持时可用
 
 	# SSL 服务器密钥证书
-	;CertFile = /etc/ssl/server-cert.pem
+	;CertFile = /etc/ngircd/cert.pem
 
 	# 选择允许用于 SSL/TLS 连接的加密套件默认值为
 	# HIGH:!aNULL:@STRENGTH (OpenSSL) 或 SECURE128 (GnuTLS)
@@ -191,10 +191,10 @@
 	;CipherList = SECURE128:-VERS-SSL3.0
 
 	# Diffie-Hellman 参数文件
-	;DHFile = /etc/ssl/dhparams.pem
+	;DHFile = /etc/ngircd/dhparams.pem
 
 	# SSL 服务器密钥文件
-	;KeyFile = /etc/ssl/server-key.pem
+	;KeyFile = /etc/ngircd/key.pem
 
 	# 解密 SSL 密钥文件的密码 仅适用于 OpenSSL
 	;KeyFilePassword = secret
@@ -207,11 +207,11 @@
 [Operator]
 	# [Operator] 区块用于定义 IRC 管理员。可配置多个 [Operator]
 
-	# 管理员标识 (可可与 Nick 不同)
+	# 管理员标识 (可与 Nick 不同)
 	Name = arkfuture
 
 	# IRC 管理员密码
-	Password = 12345678
+	Password = 
 
 	# 可选的网络掩码，仅接受符合此掩码的 /OPER 命令
 	;Mask = *
