--- a/arkfuture/config/inspircd/inspircd.conf
+++ b/arkfuture/config/inspircd/inspircd.conf
@@ -139,7 +139,7 @@
           runasgroup=""
           runasuser=""
           userstats="Pu"
-          maphide="HTTPS://ARKFUTURE.GITHUB.IO/#irc">
+          maphide="">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#性能设置#-#-#-#-#-#-#-#-#-#-#
