--- a/arkfuture/config/inspircd/conf/modules.conf
+++ b/arkfuture/config/inspircd/conf/modules.conf
@@ -171,7 +171,7 @@
 #<module name="argon2">
 #<module name="geo_maxmind">
 #<module name="ldap">
-#<module name="log_json"> 注意:此模块因为库的使用问题,将不会编译在安装包中
+#<module name="log_json">
 #<module name="log_syslog">
 #<module name="mysql">
 #<module name="pgsql">
