--- a/arkfuture/config/hybridircd/ircd.conf
+++ b/arkfuture/config/hybridircd/ircd.conf
@@ -27,9 +27,9 @@ serverinfo {
 	max_topic_length = 300;
 
 	#此项应该填写你的ssl/tls的证书
-	rsa_private_key_file = "/etc/ircd-hybrid/key/ircd.key";
-	tls_certificate_file = "/etc/ircd-hybrid/key/ircd.pem";
-	tls_dh_param_file = "/etc/ircd-hybrid/key/dhparam.pem";
+	rsa_private_key_file = "/etc/ircd-hybrid/key/key.pem";
+	tls_certificate_file = "/etc/ircd-hybrid/key/cert.pem";
+#	tls_dh_param_file = "/etc/ircd-hybrid/key/dhparam.pem";
 #	tls_supported_groups = "X25519:P-256";
 #	tls_cipher_list = "ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-SHA:AES256-SHA";
 #	tls_cipher_suites = "TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256";
