--- a/arkfuture/config/hybridircd/ircd.conf
+++ b/arkfuture/config/hybridircd/ircd.conf
@@ -13,13 +13,14 @@
  * serverinfo {}:  服务器信息
  */
 serverinfo {
-	# name值需要修改为您的irc域名(主机名)
+	# 服务器基础设置及信息
 	name = "irc.arkfuture.test";
 	sid = "0AF";
 	description = "ARKFUTURE-NET IRC server";
 	network_name = "ARKFUTURE";
 	network_description = "ARKFUTURE-NET IRC server";
 
+	#允许本服务器作为中心节点(hub), 连接多个其他服务器
 	hub = no;
 
 	default_max_clients = 512;
@@ -97,10 +98,9 @@ motd {
  * listen {}:  包含有关ircd监听端口的信息 这样的格式以此类推
  */
 listen {
-	port = 6667 .. 6669;
-
 	/* 
 	 * 注意: "flags"指令始终要在"port"之前
+	 * host: 使用后续 port 定义监听特定 IP 地址
 	 * 目前可用的标志有:
 	 *
 	 *  tls    - 端口只能接受TLS连接 
@@ -109,9 +109,16 @@ listen {
 	 *  defer  - 延迟接受新连接，直到数据准备好读取 
 	 *  hidden - 端口对/stats P隐藏 除非你是管理员 
 	 */
-	flags = hidden, tls;
-	#host = "0.0.0.0";
+
+	# 普通链接
+	flags = client;
+	port = 6667 .. 6669;
+
+	flags = client, tls;
 	port = 6697;
+
+	flags = server, tls;
+	port = 7000;
 };
 
 
@@ -119,17 +126,31 @@ listen {
  * auth {}:  允许用户连接到ircd 块必须按优先级顺序指定
  */
 auth {
-	user = "*@*";
-	#password = "letmein";
+	#user = "*@*";
+	#password = "";
 	#encrypted = yes;
 
-	/* 将用户的主机伪造为此 */
-	spoof = "ARKFUTURE";
+	/*
+	 * spoof: 将用户的主机名伪造为此值. 此字段为自由格式; 
+	 * 请勿滥用. (在 /stats I 中以 '=' 前缀显示)
+	 */
+	spoof = "i.love.debian.org";
 
-	/* 用户所属的类别 */
+	/* class: 用户所属的类别.  */
 	class = "opers";
 
-	#flags = need_ident;
+	/*
+	 * need_password - 不允许未提供正确密码的用户使用其他 auth {} 块连接 |(若禁用, 在 /stats I 中显示 '&' 前缀)
+	 * need_ident    - 要求用户必须运行 identd 才能连接                  |(在 /stats I 中显示 '+' 前缀)
+	 * exceed_limit  - 允许用户超出类别限制                             |(在 /stats I 中显示 '>' 前缀)
+	 * kline_exempt  - 免除此用户受 K-line 限制                         |(在 /stats I 中显示 '^' 前缀)
+	 * xline_exempt  - 免除此用户受 X-line 限制                         |(在 /stats I 中显示 '!' 前缀)
+	 * resv_exempt   - 免除此用户受 RESV 限制                           |(在 /stats I 中显示 '$' 前缀)
+	 * no_tilde      - 对无 ident 的用户移除 ~                          |(在 /stats I 中显示 '-' 前缀)
+	 * can_flood     - 允许此用户超出洪水限制                           |(在 /stats I 中显示 '|' 前缀)
+	 * webirc        - 为基于 Web 的客户端(如 Mibbit)启用 WEBIRC 认证 |(在 /stats I 中显示 '<' 前缀)
+	 */
+	flags = need_password, exceed_limit, kline_exempt, xline_exempt, resv_exempt, can_flood;
 };
 
 auth {
