--- a/arkfuture/config/inspircd/inspircd.conf
+++ b/arkfuture/config/inspircd/inspircd.conf
@@ -16,10 +16,10 @@
 # 定义路径[无需修改]
 <define name="ConfPath" value="conf">
 <define name="TxtPath" value="txt">
-# 定义域名[此项的value需要修改为您的ircd域名(主机名)]
+# 定义域名[此项的value需要修改为您的ircServer域名(主机名)]
 <define name="HostName" value="irc.arkfuture.test">
 # 定义域名[此项的value需要修改为您的ircService域名(主机名)]
-<define name="ServiceName" value="services.arkfuture.test">
+<define name="ServiceName" value="irc.arkfuture.test">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#服务器信息#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -39,14 +39,8 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-#端口设置#-#-#-#-#-#-#-#-#-#-#-#-#
 # <bind>标签定义了一个监听连接的端点.这个标签可以根据需要定义多次.
-#普通连接 第一个为明文 第二个为ssl
 <bind port="6667,6668,6669"
       type="clients">
-
-#websocket连接 第一个为明文 第二个为ssl
-<bind port="8067"
-      type="clients"
-      hook="websocket">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#连接设置#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -56,14 +50,14 @@
          fakelag="on"
          globalmax="0"
          hardsendq="10M"
-         localmax="3"
+         localmax="10"
          maxconnwarn="no"
-         pingfreq="2m"
+         pingfreq="120"
          recvq="1M"
          resolvehostnames="yes"
          softsendq="5M"
          threshold="0"
-         timeout="15s"
+         timeout="60"
          uniqueusername="yes">
 
 <connect name="Basic"
@@ -91,7 +85,7 @@
 
 # <dns>标签定义了在查找主机名时要使用的DNS服务器.此标签只能定义一次.
 <dns enabled="yes"
-     timeout="3s">
+     timeout="2s">
 
 # <cidr>标签定义了定位克隆时应查看的IP地址位数.此标签只能定义一次.
 <cidr ipv4clone="32"
@@ -132,7 +126,7 @@
           genericoper="no"
           publicxlinequit="很遗憾, 你因匹配到 %fulltype% 而离开. 此 %type% 于 %created% 创建, 持续时间为 %duration%, 将于 %expiry% 过期, 目前还剩 %remaining% 时间. "
           hidekills="您已经被KILL, 如获取帮助 请发匿名邮件并带上您的Nick到 arkfuture@i2pmail.org 获取详细信息."
-          hideserver="ARKFUTURE.NET"
+          hideserver="AFE.NET"
           hideservicekills="yes"
           maxtargets="20"
           restrictbannedusers="yes"
@@ -216,8 +210,8 @@
 <log method="file" 
      type="*" 
      level="normal" 
-     target="&dir.log;/ircd.log" 
-     flush="500">
+     target="ircd.log" 
+     flush="50">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#其他#-#-#-#-#-#-#-#-#-#-#-#
