--- a/arkfuture/config/inspircd/inspircd.conf
+++ b/arkfuture/config/inspircd/inspircd.conf
@@ -14,8 +14,8 @@
 
 # <define>标签允许您定义一个实体(定义服务器变量).此标签可以根据需要定义多次.
 # 定义路径[无需修改]
-<define name="ConfPath" value="conf">
-<define name="TxtPath" value="txt">
+<define name="ConfPath" value="&dir.config;/conf">
+<define name="TxtPath" value="&dir.config;/txt">
 # 定义域名[此项的value需要修改为您的ircServer域名(主机名)]
 <define name="HostName" value="irc.arkfuture.test">
 # 定义域名[此项的value需要修改为您的ircService域名(主机名)]
