--- a/arkfuture/config/inspircd/inspircd.conf
+++ b/arkfuture/config/inspircd/inspircd.conf
@@ -219,16 +219,19 @@
 <include file="&ConfPath;/modules.conf" noenv="no" noexec="no" noinclude="no" mandatorytag="module" missingokay="no">
 
 # 管理员配置文件
-#<include file="&ConfPath;/opers.conf" noenv="no" noexec="no" noinclude="no" mandatorytag="oper" missingokay="no">
-
-# 服务器互联配置
-#<include file="&ConfPath;/links.conf" noenv="no" noexec="no" noinclude="no" mandatorytag="link" missingokay="no">
+#<include  file="&ConfPath;/opers.conf" noenv="no" noexec="no" noinclude="no" mandatorytag="oper" missingokay="no">
 
 # codepage模块所导入的ascii格式
-<include file="&ConfPath;/ascii.conf" noenv="yes" noexec="yes" noinclude="no" mandatorytag="cpchars" missingokay="no">
+<include  file="&ConfPath;/ascii.conf" noenv="yes" noexec="yes" noinclude="no" mandatorytag="cpchars" missingokay="no">
 
 # 帮助文件
-<include file="&ConfPath;/helpop.conf" noenv="yes" noexec="yes" noinclude="no" mandatorytag="helpmsg" missingokay="no">
+<include  file="&ConfPath;/helpop.conf" noenv="yes" noexec="yes" noinclude="no" mandatorytag="helpmsg" missingokay="no">
 
 # 预留的别名和昵称
-<include file="&ConfPath;/generic.conf" noenv="yes" noexec="yes" noinclude="no" mandatorytag="alias" missingokay="no">
+<include  file="&ConfPath;/generic.conf" noenv="yes" noexec="yes" noinclude="no" mandatorytag="alias" missingokay="no">
+
+# 服务器互联配置
+#<include  file="&ConfPath;/links.conf" noenv="no" noexec="no" noinclude="no" mandatorytag="link" missingokay="no">
+
+# DnsBL
+#<include  file="&ConfPath;/dnsbl.conf" noenv="yes" noexec="yes" noinclude="no" mandatorytag="dnsbl" missingokay="no">
