--- a/arkfuture/config/i2p-tor/i2pd.conf
+++ b/arkfuture/config/i2p-tor/i2pd.conf
@@ -12,7 +12,8 @@ nat = true
 notransit = false #路由器将不接受中转隧道 从而完全禁用中转流量
 floodfill = false #路由器将被泛洪填充
 
-log = yes
+log = file
+logfile = i2pd.log
 loglevel = info
 logclftime = true
 
