--- a/arkfuture/config/other/AFEBOT.conf
+++ b/arkfuture/config/other/AFEBOT.conf
@@ -306,7 +306,7 @@ supybot.plugins.Utilities.public: True
 supybot.plugins.alwaysLoadImportant: True
 
 
-########## HTTP设置
+########## HTTP代理设置
 # http peek 16k
 supybot.protocols.http.peekSize: 16384
 # http代理
