--- a/arkfuture/config/other/AFEBOT.conf
+++ b/arkfuture/config/other/AFEBOT.conf
@@ -185,7 +185,7 @@ supybot.networks: ARKFUTURE
 # ARKFUTURE证书
 supybot.networks.ARKFUTURE.certfile: 
 # 频道列表
-supybot.networks.ARKFUTURE.channels: #arkfuture
+supybot.networks.ARKFUTURE.channels: #arkfuture_studio
 # 频道key
 supybot.networks.ARKFUTURE.channels.key: 
 # 网络ident
