--- a/arkfuture/config/other/AFEBOT.conf
+++ b/arkfuture/config/other/AFEBOT.conf
@@ -149,7 +149,7 @@ supybot.followIdentificationThroughNickChanges: False
 
 
 ########## ident字符串
-supybot.ident: limnoria
+supybot.ident: AFEBOT
 
 
 ########## 语言en
