--- a/arkfuture/config/limnoria-ircbot/AFEBOT.conf
+++ b/arkfuture/config/limnoria-ircbot/AFEBOT.conf
@@ -47,7 +47,7 @@ supybot.capabilities.registeredUsers:
 
 ########## 是否允许 shell 命令
 # 允许shell命令
-supybot.commands.allowShell: True
+supybot.commands.allowShell: False
 # 核心插件优先
 supybot.commands.defaultPlugins.importantPlugins: Admin Channel Config Misc Owner User
 # 禁用命令列表
