--- a/arkfuture/config/limnoria-ircbot/AFEBOT.conf
+++ b/arkfuture/config/limnoria-ircbot/AFEBOT.conf
@@ -238,16 +238,91 @@ supybot.pidFile: supybot.pid
 
 
 ########## 插件目录
-# 已装插件
-supybot.plugins: Admin AutoMode Channel Config Misc Network NickAuth User Utilities
+# 已装插件列表
+supybot.plugins: Admin Aka Anonymous AutoMode Autocomplete BadWords Channel ChannelLogger ChannelStats Config Ctcp Dunno Factoids Fediverse Filter Format GPG Games Hashes Herald Internet Karma Lart Later Math Misc MoobotFactoids Network News NickAuth NickCapture Nickometer Note Owner Plugin Poll Praise Quote QuoteGrabs RSS Relay Reply Scheduler Seen ShrinkUrl Status String Success Time Todo Topic URL User Utilities Web
 # 加载admin
 supybot.plugins.Admin: True
 # admin公开
 supybot.plugins.Admin.public: True
+# 加载aka
+supybot.plugins.Aka: True
+# aka命令名最大词数5
+supybot.plugins.Aka.maximumWordsInName: 5
+# aka公开
+supybot.plugins.Aka.public: True
+# aka web关闭
+supybot.plugins.Aka.web.enable: False
+# 加载anonymous
+supybot.plugins.Anonymous: True
+# 允许tell私聊
+supybot.plugins.Anonymous.allowPrivateTarget: False
+# anonymous公开
+supybot.plugins.Anonymous.public: True
+# anonymous所需能力
+supybot.plugins.Anonymous.requireCapability: 
+# anonymous需在场
+supybot.plugins.Anonymous.requirePresenceInChannel: True
+# anonymous需注册
+supybot.plugins.Anonymous.requireRegistration: True
 # 加载automode
 supybot.plugins.AutoMode: True
+# 启用替代能力
+supybot.plugins.AutoMode.alternativeCapabilities: True
+# 自动ban
+supybot.plugins.AutoMode.ban: True
+# 自动ban时长86400秒
+supybot.plugins.AutoMode.ban.period: 86400
+# 模式延迟0秒
+supybot.plugins.AutoMode.delay: 0
+# automode启用
+supybot.plugins.AutoMode.enable: True
+# 额外模式
+supybot.plugins.AutoMode.extra:  
+# 降级fallback
+supybot.plugins.AutoMode.fallthrough: True
+# 自动halfop
+supybot.plugins.AutoMode.halfop: False
+# 自动op
+supybot.plugins.AutoMode.op: False
+# owner也自动模式
+supybot.plugins.AutoMode.owner: False
 # automode公开
 supybot.plugins.AutoMode.public: True
+# 自动voice
+supybot.plugins.AutoMode.voice: False
+# 不加载autocomplete
+supybot.plugins.Autocomplete: False
+# autocomplete启用
+supybot.plugins.Autocomplete.enabled: False
+# autocomplete公开
+supybot.plugins.Autocomplete.public: True
+# 加载badwords
+supybot.plugins.BadWords: True
+# 说脏话踢出
+supybot.plugins.BadWords.kick: False
+# 踢出消息
+supybot.plugins.BadWords.kick.message: You have been kicked for using a word\
+                                       prohibited in the presence of this\
+                                       bot. Please use more appropriate\
+                                       language in the future.
+# 脏话替换字符
+supybot.plugins.BadWords.nastyChars: !@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!@#&!&!@#&!@#&
+# 逗号分隔的脏话词组
+supybot.plugins.BadWords.phrases:  
+# badwords公开
+supybot.plugins.BadWords.public: True
+# 替换方式nastyCharacters
+supybot.plugins.BadWords.replaceMethod: nastyCharacters
+# 需词边界
+supybot.plugins.BadWords.requireWordBoundaries: False
+# 过滤自己
+supybot.plugins.BadWords.selfCensor: True
+# 简单替换字
+supybot.plugins.BadWords.simpleReplacement: [CENSORED]
+# 去格式再过滤
+supybot.plugins.BadWords.stripFormatting: True
+# 脏话词表
+supybot.plugins.BadWords.words:  
 # 加载channel
 supybot.plugins.Channel: True
 # 被踢自动重进
@@ -260,10 +335,206 @@ supybot.plugins.Channel.partMsg: Limnoria $version
 supybot.plugins.Channel.public: True
 # 重进延迟0秒
 supybot.plugins.Channel.rejoinDelay: 0
+# 加载channellogger
+supybot.plugins.ChannelLogger: True
+# 分目录存日志
+supybot.plugins.ChannelLogger.directories: True
+# 分频道目录
+supybot.plugins.ChannelLogger.directories.channel: True
+# 分网络目录
+supybot.plugins.ChannelLogger.directories.network: True
+# 按时间分目录
+supybot.plugins.ChannelLogger.directories.timestamp: False
+# 时间目录格式%B
+supybot.plugins.ChannelLogger.directories.timestamp.format: %B
+# 启用日志
+supybot.plugins.ChannelLogger.enable: True
+# 日志文件名日期格式%Y-%m-%d
+supybot.plugins.ChannelLogger.filenameTimestamp: %Y-%m-%d
+# 立即刷盘
+supybot.plugins.ChannelLogger.flushImmediately: True
+# 免录前缀[nolog]
+supybot.plugins.ChannelLogger.noLogPrefix: [nolog]
+# channellogger公开
+supybot.plugins.ChannelLogger.public: True
+# 重写中继消息
+supybot.plugins.ChannelLogger.rewriteRelayed: False
+# 自动轮转日志
+supybot.plugins.ChannelLogger.rotateLogs: False
+# 记录away
+supybot.plugins.ChannelLogger.showAway: True
+# 记录join part
+supybot.plugins.ChannelLogger.showJoinParts: True
+# 去格式
+supybot.plugins.ChannelLogger.stripFormatting: True
+# 日志带时间戳
+supybot.plugins.ChannelLogger.timestamp: True
+# 加载channelstats
+supybot.plugins.ChannelStats: True
+# 皱眉词
+supybot.plugins.ChannelStats.frowns: :| :-/ :-\\ :\\ :/ :( :-( :'(
+# channelstats公开
+supybot.plugins.ChannelStats.public: True
+# 统计自己
+supybot.plugins.ChannelStats.selfStats: True
+# 微笑词
+supybot.plugins.ChannelStats.smileys: :) ;) ;] :-) :-D :D :P :p (= =)
 # 加载config
 supybot.plugins.Config: True
 # config公开
 supybot.plugins.Config.public: True
+# 加载ctcp
+supybot.plugins.Ctcp: True
+# ctcp公开
+supybot.plugins.Ctcp.public: True
+# userinfo回复
+supybot.plugins.Ctcp.userinfo: 
+# version等待10秒
+supybot.plugins.Ctcp.versionWait: 10
+# 加载dunno
+supybot.plugins.Dunno: True
+# dunno加nick前缀
+supybot.plugins.Dunno.prefixNick: True
+# dunno公开
+supybot.plugins.Dunno.public: True
+# 加载factoids
+supybot.plugins.Factoids: True
+# factoid格式$value
+supybot.plugins.Factoids.format: $value
+# 记录热度
+supybot.plugins.Factoids.keepRankInfo: True
+# learn分隔符is
+supybot.plugins.Factoids.learnSeparator: is
+# factoids公开
+supybot.plugins.Factoids.public: True
+# 热度榜长度20
+supybot.plugins.Factoids.rankListLength: 20
+# 近似搜索提示
+supybot.plugins.Factoids.replyApproximateSearchKeys: True
+# 无效命令搜factoid
+supybot.plugins.Factoids.replyWhenInvalidCommand: True
+# learn需voice
+supybot.plugins.Factoids.requireVoice: False
+# 仅1匹配时显示
+supybot.plugins.Factoids.showFactoidIfOnlyOneMatch: True
+# web频道关闭
+supybot.plugins.Factoids.web.channel: False
+# web浏览关闭
+supybot.plugins.Factoids.web.enable: False
+# 加载fediverse
+supybot.plugins.Fediverse: True
+# 显示含cw内容
+supybot.plugins.Fediverse.format.statuses.showContentWithCW: True
+# fediverse公开
+supybot.plugins.Fediverse.public: True
+# 个人资料snarfer
+supybot.plugins.Fediverse.snarfers.profile: False
+# 状态snarfer
+supybot.plugins.Fediverse.snarfers.status: False
+# 用户名snarfer
+supybot.plugins.Fediverse.snarfers.username: False
+# 加载filter
+supybot.plugins.Filter: True
+# filter公开
+supybot.plugins.Filter.public: True
+# shrink最小长度4
+supybot.plugins.Filter.shrink.minimum: 4
+# spellit替换字母
+supybot.plugins.Filter.spellit.replaceLetters: True
+# spellit替换数字
+supybot.plugins.Filter.spellit.replaceNumbers: True
+# spellit替换标点
+supybot.plugins.Filter.spellit.replacePunctuation: True
+# 加载format
+supybot.plugins.Format: True
+# format公开
+supybot.plugins.Format.public: True
+# 加载gpg
+supybot.plugins.GPG: True
+# gpg签名token超时600秒
+supybot.plugins.GPG.auth.sign.TokenTimeout: 600
+# 启用gpg签名认证
+supybot.plugins.GPG.auth.sign.enable: True
+# gpg公开
+supybot.plugins.GPG.public: True
+# 加载games
+supybot.plugins.Games: True
+# games公开
+supybot.plugins.Games.public: True
+# 加载hashes
+supybot.plugins.Hashes: True
+# hashes公开
+supybot.plugins.Hashes.public: True
+# 加载herald
+supybot.plugins.Herald: True
+# 默认herald
+supybot.plugins.Herald.default: 
+# 默认herald用notice
+supybot.plugins.Herald.default.notice: True
+# 默认herald不公开
+supybot.plugins.Herald.default.public: False
+# 启用herald
+supybot.plugins.Herald.heralding: True
+# herald公开
+supybot.plugins.Herald.public: True
+# 管理herald所需能力
+supybot.plugins.Herald.requireCapability: 
+# herald节流600秒
+supybot.plugins.Herald.throttle: 600
+# part后节流0秒
+supybot.plugins.Herald.throttle.afterPart: 0
+# 分裂后节流60秒
+supybot.plugins.Herald.throttle.afterSplit: 60
+# 加载internet
+supybot.plugins.Internet: True
+# internet公开
+supybot.plugins.Internet.public: True
+# 加载karma
+supybot.plugins.Karma: True
+# 允许自评
+supybot.plugins.Karma.allowSelfRating: False
+# 允许未寻址karma
+supybot.plugins.Karma.allowUnaddressedKarma: True
+# 降karma字符--
+supybot.plugins.Karma.decrementChars: --
+# 升karma字符++
+supybot.plugins.Karma.incrementChars: ++
+# 热度榜显示25
+supybot.plugins.Karma.mostDisplay: 25
+# 仅频道nick
+supybot.plugins.Karma.onlyNicks: False
+# karma公开
+supybot.plugins.Karma.public: True
+# 排行显示3
+supybot.plugins.Karma.rankingDisplay: 3
+# 操作回应
+supybot.plugins.Karma.response: False
+# 简化输出
+supybot.plugins.Karma.simpleOutput: False
+# 加载lart
+supybot.plugins.Lart: True
+# lart公开
+supybot.plugins.Lart.public: True
+# 显示lart id
+supybot.plugins.Lart.showIds: False
+# 加载later
+supybot.plugins.Later: True
+# 显示发送者host
+supybot.plugins.Later.format.senderHostname: False
+# 最大队列0
+supybot.plugins.Later.maximum: 0
+# 消息过期30天
+supybot.plugins.Later.messageExpiry: 30
+# 私聊通知
+supybot.plugins.Later.private: False
+# later公开
+supybot.plugins.Later.public: True
+# 加入时通知
+supybot.plugins.Later.tellOnJoin: False
+# 加载math
+supybot.plugins.Math: True
+# math公开
+supybot.plugins.Math.public: True
 # 加载misc
 supybot.plugins.Misc: True
 # 自定义help
@@ -280,19 +551,245 @@ supybot.plugins.Misc.listUnloadedPlugins: False
 supybot.plugins.Misc.mores: 1
 # misc公开
 supybot.plugins.Misc.public: True
-# misc时间格式
+# 时间格式[%H:%M:%S]
 supybot.plugins.Misc.timestampFormat: [%H:%M:%S]
+# 加载moobotfactoids
+supybot.plugins.MoobotFactoids: True
+# 最热显示10
+supybot.plugins.MoobotFactoids.mostCount: 10
+# moobotfactoids公开
+supybot.plugins.MoobotFactoids.public: True
+# 仅1匹配时显示内容
+supybot.plugins.MoobotFactoids.showFactoidIfOnlyOneMatch: True
 # 加载network
 supybot.plugins.Network: True
 # network公开
 supybot.plugins.Network.public: True
+# 加载news
+supybot.plugins.News: True
+# news公开
+supybot.plugins.News.public: True
 # 加载nickauth
 supybot.plugins.NickAuth: True
 # nickauth公开
 supybot.plugins.NickAuth.public: True
+# 加载nickcapture
+supybot.plugins.NickCapture: True
+# ison检查
+supybot.plugins.NickCapture.ison: True
+# ison周期600秒
+supybot.plugins.NickCapture.ison.period: 600
+# nickcapture公开
+supybot.plugins.NickCapture.public: True
+# 加载nickometer
+supybot.plugins.Nickometer: True
+# nickometer公开
+supybot.plugins.Nickometer.public: True
+# 加载note
+supybot.plugins.Note: True
+# 自动发送阈值0
+supybot.plugins.Note.notify.autoSend: 0
+# 加入时通知
+supybot.plugins.Note.notify.onJoin: False
+# 重复加入通知
+supybot.plugins.Note.notify.onJoin.repeatedly: False
+# note公开
+supybot.plugins.Note.public: True
+# 加载owner
+supybot.plugins.Owner: True
+# 公告格式
+supybot.plugins.Owner.announceFormat: Announcement from my owner ($owner): $text
+# owner公开
+supybot.plugins.Owner.public: True
+# 默认quit消息
+supybot.plugins.Owner.quitMsg: Limnoria $version
+# 加载plugin
+supybot.plugins.Plugin: True
+# plugin公开
+supybot.plugins.Plugin.public: True
+# 加载poll
+supybot.plugins.Poll: True
+# 管理所需能力
+supybot.plugins.Poll.requireManageCapability: channel,op; channel,halfop
+# poll公开
+supybot.plugins.Poll.public: True
+# 加载praise
+supybot.plugins.Praise: True
+# praise公开
+supybot.plugins.Praise.public: True
+# 显示praise id
+supybot.plugins.Praise.showIds: False
+# 加载quote
+supybot.plugins.Quote: True
+# quote公开
+supybot.plugins.Quote.public: True
+# 加载quotegrabs
+supybot.plugins.QuoteGrabs: True
+# quotegrabs公开
+supybot.plugins.QuoteGrabs.public: True
+# 随机抓取
+supybot.plugins.QuoteGrabs.randomGrabber: False
+# 平均抓取间隔864000秒
+supybot.plugins.QuoteGrabs.randomGrabber.averageTimeBetweenGrabs: 864000
+# 最小字符8
+supybot.plugins.QuoteGrabs.randomGrabber.minimumCharacters: 8
+# 最小单词3
+supybot.plugins.QuoteGrabs.randomGrabber.minimumWords: 3
+# 加载rss
+supybot.plugins.RSS: True
+# 宣布频道
+supybot.plugins.RSS.announce:  
+# 宣布格式
+supybot.plugins.RSS.announceFormat: News from $feed_name: $title <$link>
+# 默认头条数1
+supybot.plugins.RSS.defaultNumberOfHeadlines: 1
+# 命令订阅
+supybot.plugins.RSS.feeds:  
+# 手动格式
+supybot.plugins.RSS.format: $date: $title <$link>
+# 头条分隔符|
+supybot.plugins.RSS.headlineSeparator:  | 
+# 首次宣布5条
+supybot.plugins.RSS.initialAnnounceHeadlines: 5
+# 关键词黑名单
+supybot.plugins.RSS.keywordBlacklist:  
+# 关键词白名单
+supybot.plugins.RSS.keywordWhitelist:  
+# 最大宣布5条
+supybot.plugins.RSS.maximumAnnounceHeadlines: 5
+# 用notice
+supybot.plugins.RSS.notice: False
+# rss公开
+supybot.plugins.RSS.public: True
+# 排序方式asInFeed
+supybot.plugins.RSS.sortFeedItems: asInFeed
+# 缓存1800秒
+supybot.plugins.RSS.waitPeriod: 1800
+# 加载relay
+supybot.plugins.Relay: True
+# 中继频道
+supybot.plugins.Relay.channels:  
+# 所有网络加入
+supybot.plugins.Relay.channels.joinOnAllNetworks: False
+# 彩色中继
+supybot.plugins.Relay.color: True
+# 显示hostmask
+supybot.plugins.Relay.hostmasks: True
+# 忽略hostmask
+supybot.plugins.Relay.ignores:  
+# 含网络名
+supybot.plugins.Relay.includeNetwork: True
+# 非privmsg用notice
+supybot.plugins.Relay.noticeNonPrivmsgs: False
+# relay公开
+supybot.plugins.Relay.public: True
+# 惩罚其他relay bot
+supybot.plugins.Relay.punishOtherRelayBots: True
+# 同步topic
+supybot.plugins.Relay.topicSync: True
+# 加载reply
+supybot.plugins.Reply: True
+# reply公开
+supybot.plugins.Reply.public: True
+# 加载scheduler
+supybot.plugins.Scheduler: True
+# scheduler公开
+supybot.plugins.Scheduler.public: True
+# 加载seen
+supybot.plugins.Seen: True
+# 最小非通配2
+supybot.plugins.Seen.minimumNonWildcard: 2
+# seen公开
+supybot.plugins.Seen.public: True
+# 显示最后消息
+supybot.plugins.Seen.showLastMessage: True
+# 加载shrinkurl
+supybot.plugins.ShrinkUrl: True
+# 加粗
+supybot.plugins.ShrinkUrl.bold: True
+# 默认服务x0
+supybot.plugins.ShrinkUrl.default: x0
+# 最小长度48
+supybot.plugins.ShrinkUrl.minimumLength: 48
+# 不抓正则
+supybot.plugins.ShrinkUrl.nonSnarfingRegexp: 
+# 出站过滤
+supybot.plugins.ShrinkUrl.outFilter: False
+# shrinkurl公开
+supybot.plugins.ShrinkUrl.public: True
+# 服务轮换
+supybot.plugins.ShrinkUrl.serviceRotation:  
+# 缩链snarfer
+supybot.plugins.ShrinkUrl.shrinkSnarfer: False
+# 显示域名
+supybot.plugins.ShrinkUrl.shrinkSnarfer.showDomain: True
+# 加载status
+supybot.plugins.Status: True
+# cpu含子进程
+supybot.plugins.Status.cpu.children: True
+# cpu含内存
+supybot.plugins.Status.cpu.memory: True
+# cpu含线程
+supybot.plugins.Status.cpu.threads: False
+# status公开
+supybot.plugins.Status.public: True
+# 加载string
+supybot.plugins.String: True
+# levenshtein最大256
+supybot.plugins.String.levenshtein.max: 256
+# string公开
+supybot.plugins.String.public: True
+# 正则超时0.1秒
+supybot.plugins.String.re.timeout: 0.1
+# 加载success
+supybot.plugins.Success: True
+# success加nick前缀
+supybot.plugins.Success.prefixNick: True
+# success公开
+supybot.plugins.Success.public: True
+# 加载time
+supybot.plugins.Time: True
+# 时间格式
+supybot.plugins.Time.format: %Y-%m-%dT%H:%M:%S%z
+# time公开
+supybot.plugins.Time.public: True
+# 加载todo
+supybot.plugins.Todo: True
+# 允许第三方读
+supybot.plugins.Todo.allowThirdpartyReader: False
+# todo公开
+supybot.plugins.Todo.public: True
+# 加载topic
+supybot.plugins.Topic: True
+# 允许分隔符在topic
+supybot.plugins.Topic.allowSeparatorinTopics: True
+# 每次加入都设topic
+supybot.plugins.Topic.alwaysSetOnJoin: False
+# 默认topic
+supybot.plugins.Topic.default: 
+# topic格式
+supybot.plugins.Topic.format: $topic
+# topic公开
+supybot.plugins.Topic.public: True
+# 识别topiclen
+supybot.plugins.Topic.recognizeTopiclen: True
+# 管理所需能力
+supybot.plugins.Topic.requireManageCapability: channel,op; channel,halfop
+# topic分隔符|
+supybot.plugins.Topic.separator:  | 
+# 加入空topic时设置
+supybot.plugins.Topic.setOnJoin: True
+# 撤销最大10
+supybot.plugins.Topic.undo.max: 10
+# 加载url
+supybot.plugins.URL: True
+# 不抓正则
+supybot.plugins.URL.nonSnarfingRegexp: 
+# url公开
+supybot.plugins.URL.public: True
 # 加载user
 supybot.plugins.User: True
-# whoami错误信息
+# whoami错误
 supybot.plugins.User.customWhoamiError: 
 # user列表私聊
 supybot.plugins.User.listInPrivate: True
@@ -302,6 +799,34 @@ supybot.plugins.User.public: True
 supybot.plugins.Utilities: True
 # utilities公开
 supybot.plugins.Utilities.public: True
+# 加载web
+supybot.plugins.Web: True
+# 检查忽略
+supybot.plugins.Web.checkIgnored: True
+# fetch最大0
+supybot.plugins.Web.fetch.maximum: 0
+# fetch超时5秒
+supybot.plugins.Web.fetch.timeout: 5
+# 不抓正则
+supybot.plugins.Web.nonSnarfingRegexp: 
+# web公开
+supybot.plugins.Web.public: True
+# 抓多个url
+supybot.plugins.Web.snarfMultipleUrls: False
+# snarfer前缀Title:
+supybot.plugins.Web.snarferPrefix: Title:
+# 报告io异常
+supybot.plugins.Web.snarferReportIOExceptions: False
+# 显示域名
+supybot.plugins.Web.snarferShowDomain: True
+# 显示目标域名
+supybot.plugins.Web.snarferShowTargetDomain: False
+# 命令超时5秒
+supybot.plugins.Web.timeout: 5
+# title snarfer关闭
+supybot.plugins.Web.titleSnarfer: False
+# url白名单
+supybot.plugins.Web.urlWhitelist:  
 # 强制加载核心插件
 supybot.plugins.alwaysLoadImportant: True
 
