--- a/arkfuture/config/limnoria-ircbot/AFEBOT.conf
+++ b/arkfuture/config/limnoria-ircbot/AFEBOT.conf
@@ -239,7 +239,7 @@ supybot.pidFile: supybot.pid
 
 ########## 插件目录
 # 已装插件列表
-supybot.plugins: Admin Aka Anonymous AutoMode Autocomplete BadWords Channel ChannelLogger ChannelStats Config Ctcp Dunno Factoids Fediverse Filter Format GPG Games Hashes Herald Internet Karma Lart Later Math Misc MoobotFactoids Network News NickAuth NickCapture Nickometer Note Owner Plugin Poll Praise Quote QuoteGrabs RSS Relay Reply Scheduler Seen ShrinkUrl Status String Success Time Todo Topic URL User Utilities Web
+supybot.plugins: Admin Aka Anonymous AutoMode Autocomplete BadWords Channel ChannelLogger ChannelStats Config Ctcp Dict Dunno Factoids Fediverse Filter Format GPG Games Hashes Herald Internet Karma Lart Later Math Misc MoobotFactoids Network News NickAuth NickCapture Nickometer Note Owner Plugin Poll Praise Quote QuoteGrabs RSS Relay Reply Scheduler Seen ShrinkUrl Status String Success Time Todo Topic URL User Utilities Web
 # 加载admin
 supybot.plugins.Admin: True
 # admin公开
@@ -391,6 +391,16 @@ supybot.plugins.Ctcp.public: True
 supybot.plugins.Ctcp.userinfo: 
 # version等待10秒
 supybot.plugins.Ctcp.versionWait: 10
+# 加载dict
+supybot.plugins.Dict: True
+# 查询定义时使用的默认词典
+supybot.plugins.Dict.default: *
+# dict公开
+supybot.plugins.Dict.public: True
+# 从哪个服务器获取定义
+supybot.plugins.Dict.server: dict.org
+# 当所选词典为 * 时 决定是否显示哪些词典返回了查询结果
+supybot.plugins.Dict.showDictName: True
 # 加载dunno
 supybot.plugins.Dunno: True
 # dunno加nick前缀
